js/js.translator/testData/incremental/invalidation/suspendFunctions/main/m.kt
suspend fun suspendBox(): Int {
    konst x = fooX()
    konst y = fooY()
    return x + y
}

fun box() = "OK"
